# actions

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  .project  .pydevproject  AGENTS.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  COMMUNITY_UI_SPEC.md  CONTRIBUTING.md  FRESH_BUILD_GUIDE.md  LICENSE  NOTICE.md  README.md  UNAUTHENTICATED-BUILD-SUMMARY.md  chrome-flatpak-wrapper.sh  env.json  forjoshyorko.txt  pyproject.toml  verify_t026a.py
action_server/: .gitignore  README.md  action-server.spec  build.py  pyproject.toml  ruff.toml  tasks.py  tasks_cdn.py
action_server/build-binary/: __init__.py  artifact_validator.py  build_artifact.py  checksum_utils.py  determinism.py  downloads_index.py  package_manifest.py  package_resolver.py  pyoxidizer.bzl  tier_selector.py  tree_shaker.py  vendor-frontend.py
action_server/developer/: README.md  call_invoke.py  setup.yaml  toolkit.yaml
action_server/developer/tmp/: environment_linux_amd64_freeze.yaml  journal.run
action_server/docs/: BUILDING_WITH_CDN.md  CHANGELOG.md  DEVELOP.md  DEVELOPMENT.md
action_server/docs/guides/: 00-startup-command-line.md  01-package-yaml.md  04-custom-data.md  05-exposing.md  06-package-distribution.md  06-package.md  07-secrets.md  08-clean-tools-caches.md  09-structuring-actions.md  10-generated-logs-and-artifacts.md  10-generated-logs.md  11-action-server-ui.md  12-oauth2-development.md  13-post-run-script.md  14-dev-tasks.md  15-package-metadata.md  16-run-action-sync-async.md  17-external-endpoints.md  18-data-packages.md  20-chat-files.md  21-call-action.md
action_server/frontend/: .eslintignore  .eslintrc.json  .gitignore  .lighthouserc.json  .npmignore  README.md  feature-boundaries.json  index.html  package-lock.json  package.json  package.json.enterprise  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js
action_server/frontend/docs/: CROSS_BROWSER_TESTING.md  PERFORMANCE_AUDIT.md
action_server/frontend/scripts/: check-bundle-size.cjs
action_server/frontend/src/: App.tsx  index.css  index.tsx
action_server/go-wrapper/: .gitignore  go.mod  go.sum  main.go
action_server/scripts/: __init__.py  uv_tasks.py
action_server/tests/: conftest.py
action_server/tests/action_server_tests/: data_server_cli_fixtures.py  fixtures.py  sample_data.py  test_action_description.py  test_action_unicode.py  test_actions_process_pool.py  test_api_analytics.py  test_binary.py  test_checksum_utils.py  test_cli.py  test_cloud.py  test_create_conda_from_package_yaml.py  test_create_new_project.py  test_data_package.py  test_database.py  test_datadir_related_actions.py  test_devenv.py  test_frontend_build_unauthenticated.py  test_get_oauth_config.py  test_log_verbosity.py  test_mcp_integration.py  test_oauth2.py  test_package.py  test_package_yaml_structure.py  test_quickstart_validation.py  test_server.py  test_server_async.py  test_server_automigrate.py  test_server_custom_model.py  test_server_expose.py  test_server_headers_in_body.py  test_server_hot_reload.py  test_server_https.py  test_server_parent_pid.py  test_server_post_run.py  test_server_request.py  test_server_response.py  test_server_secrets.py  test_server_websockets.py  test_server_whitelist.py  (+3 more)
action_server/tests/build_system_tests/: README.md  __init__.py  test_build_artifact.py  test_package_manifest.py  test_package_resolver.py  test_tier_selector.py  test_tree_shaker.py
action_server/tests/contract_tests/: README.md  __init__.py  test_artifact_naming.py  test_artifact_validation.py  test_ci_import_detection.py  test_cli_contract.py  test_config_files.py  test_import_guards.py
action_server/tests/integration_tests/: README.md  __init__.py  test_ci_matrix.py  test_community_isolation.py  test_community_offline.py  test_enterprise_isolation.py  test_enterprise_registry.py  test_enterprise_vendored.py  test_json_output.py  test_tier_logging.py  test_validation_guard.py
action_server/tests/performance_tests/: baseline.json
action_server/tests/quickstart_tests/: README.md  __init__.py
actions/: README.md  pyproject.toml  tasks.py
actions/docs/: CHANGELOG.md  development.md
actions/docs/api/: README.md  sema4ai.actions.agent.md  sema4ai.actions.api.md  sema4ai.actions.chat.md  sema4ai.actions.cli.md  sema4ai.actions.dataframe.md  sema4ai.actions.md
actions/docs/guides/: 00-request.md  01-secrets.md  02-chat-files.md
actions/tests/: conftest.py
actions/tests/actions_core_tests/: fixtures.py  test_collect_tasks.py  test_collect_tasks2.py  test_collect_tasks_glob.py  test_core_log_integration.py  test_find_action_paths.py  test_fixture_module.py  test_fixtures.py  test_force_early_exit.py  test_interrupt.py  test_lifecycle.py  test_task_schema.py  test_tasks_arguments.py  test_tasks_mutable.py  test_teardown.py
actions/tests/actions_tests/: agent_dummy_server.py  files_dummy_server.py  test_action_context.py  test_actions.py  test_actions_custom_data_models.py  test_actions_oauth2_secrets.py  test_actions_pydantic.py  test_actions_request.py  test_actions_response.py  test_actions_secrets.py  test_agent.py  test_agent_dataframe_functions.py  test_agent_functions.py  test_callback_headers.py  test_chat_files.py  test_dataframe_utils.py  test_full_import_pythonpath.py  test_help.py  test_lint_actions.py  test_print.py  (+2 more)
build_common/: README.md  pyproject.toml  tasks.py
build_common/docs/: CHANGELOG.md
common/: README.md  pyproject.toml  tasks.py
common/docs/: CHANGELOG.md
devutils/: cve-update-order.md  development-environment.yaml  pyproject.toml  requirements.txt
mcp/: README.md  pyproject.toml  tasks.py
mcp/docs/: CHANGELOG.md
mcp_core/: pyproject.toml  requirements.txt
mcp_core/schema/: 2025-03-26-schema.ts  2025-06-18-schema.ts  README.md  codegen.py
sema4ai-http-helper/: .gitignore  README.md  pyproject.toml  sema4ai_http.py  tasks.py
sema4ai-http-helper/docs/: CHANGELOG.md
sema4ai-http-helper/src/: sema4ai_http.py
sema4ai-http-helper/tests/: test_http_helper.py
work-items/: NOTICE.md  README.md  pyproject.toml  tasks.py
work-items/docs/: CHANGELOG.md
(+846 files in other folders)
