[tool.poetry]
name = "sema4ai-actions"
version = "0.10.0"
description = "Sema4AI Actions"
authors = [
	"Fabio Z. <fabio@robocorp.com>",
]
readme = "README.md"
repository = "https://github.com/Sema4AI/actions/"
license = "Apache-2.0"
packages = [{ include = "sema4ai/actions", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.5"
robocorp-log = ">=2.4,<3"
robocorp-truststore= ">=0.8.0"
psutil = "^5.0"
docstring_parser_fork = "^0.0.5"
pydantic = "^2.0" # Required for the `Response[T]`

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }
types-psutil = "^5.9"



[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
