[tool.poetry]
name = "sema4ai-actions"
version = "1.4.1"
description = "Sema4AI Actions"
authors = ["Sema4.ai Engineering <engineering@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/Sema4AI/actions/"
license = "Apache-2.0"
packages = [{ include = "sema4ai/actions", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.1"
robocorp-log = ">=2.4,<4"
robocorp-truststore = ">=0.8.0"
psutil = ">=5.0,<8.0"
docstring_parser_fork = "^0.0.5"
pydantic = "^2.11.7"
sema4ai-http-helper = "^2.0.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }
types-psutil = ">=5.9,<8.0"
types-PyYAML = "6.0"

[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
