# =============================================================================
# PEP 621 project metadata (used by uv)
# =============================================================================
[project]
name = "sema4ai-actions"
version = "1.6.6"
description = "Sema4AI Actions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sema4.ai, Inc.", email = "dev@sema4.ai" },
]
dependencies = [
    "cryptography>=44.0.1",
    "robocorp-log>=2.4,<4",
    "robocorp-truststore>=0.8.0",
    "psutil>=5.0,<8.0",
    "docstring_parser_fork>=0.0.5",
    "pydantic>=2.11.7",
    "sema4ai-http-helper>=2.0.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Sema4AI/actions/"
Repository = "https://github.com/Sema4AI/actions/"

# =============================================================================
# UV configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "sema4ai-devutils",
    "types-psutil>=5.9,<8.0",
    "types-PyYAML>=6.0",
]

[tool.uv.sources]
sema4ai-http-helper = { workspace = true }
sema4ai-devutils = { workspace = true }

# =============================================================================
# Poetry configuration (kept for backward compatibility)
# =============================================================================
[tool.poetry]
name = "sema4ai-actions"
version = "1.6.6"
description = "Sema4AI Actions"
authors = ["Sema4.ai, Inc. <dev@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/Sema4AI/actions/"
license = "Apache-2.0"
packages = [{ include = "sema4ai/actions", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = ">=44.0.1"
robocorp-log = ">=2.4,<4"
robocorp-truststore = ">=0.8.0"
psutil = ">=5.0,<8.0"
docstring_parser_fork = "^0.0.5"
pydantic = "^2.11.7"
sema4ai-http-helper = "^2.0.1"
pyyaml = "^6.0"

[tool.poetry.group.optional.dependencies]
pyarrow = "^15.0"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }
types-psutil = ">=5.9,<8.0"
types-PyYAML = "6.0"

[tool.mypy]
mypy_path = "src:tests"
ignore_missing_imports = true

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
