# =============================================================================
# PEP 621 project metadata (used by uv)
# =============================================================================
[project]
name = "sema4ai-common"
version = "0.3.0"
description = "Sema4AI Common"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Sema4.ai Engineering", email = "engineering@sema4.ai" },
]
dependencies = [
    "psutil>=5.0,<7.0",
    "sema4ai-http-helper>=2.0.0",
    "pyyaml>=6.0",
    "msgspec>=0.18",
]

[project.urls]
Homepage = "https://github.com/Sema4AI/actions/"
Repository = "https://github.com/Sema4AI/actions/"

# =============================================================================
# Development dependencies (PEP 735)
# =============================================================================
[dependency-groups]
dev = [
    "sema4ai-devutils",
    "types-psutil>=5.9",
    "types-PyYAML>=6.0",
]

# =============================================================================
# UV configuration
# =============================================================================
[tool.uv.sources]
sema4ai-http-helper = { workspace = true }
sema4ai-devutils = { workspace = true }

# =============================================================================
# Poetry configuration (kept for backward compatibility)
# =============================================================================
[tool.poetry]
name = "sema4ai-common"
version = "0.3.0"
description = "Sema4AI Common"
authors = ["Sema4.ai Engineering <engineering@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/Sema4AI/actions/"
license = "Apache-2.0"
packages = [{ include = "sema4ai/common", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
psutil = ">=5.0,<7.0"
sema4ai-http-helper = "^2.0.0"
pyyaml = "^6.0"
msgspec = ">=0.18"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }
types-psutil = "^5.9"
types-PyYAML = "6.0"

[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
