# =============================================================================
# PEP 621 project metadata (used by uv)
# =============================================================================
[project]
name = "sema4ai-mcp"
version = "0.0.3"
description = "Sema4AI Model Context Protocol (MCP)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sema4.ai, Inc.", email = "dev@sema4.ai" },
]
dependencies = [
    "sema4ai-actions>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/Sema4AI/actions/"
Repository = "https://github.com/Sema4AI/actions/"

# =============================================================================
# UV configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "sema4ai-devutils",
]

[tool.uv.sources]
sema4ai-actions = { workspace = true }
sema4ai-devutils = { workspace = true }

# =============================================================================
# Poetry configuration (kept for backward compatibility)
# =============================================================================
[tool.poetry]
name = "sema4ai-mcp"
version = "0.0.3"
description = "Sema4AI Model Context Protocol (MCP)"
authors = ["Sema4.ai, Inc. <dev@sema4.ai>"]
readme = "README.md"
repository = "https://github.com/Sema4AI/actions/"
license = "Apache-2.0"
packages = [{ include = "sema4ai/mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
sema4ai-actions = "^1.6.0"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }

[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
