[tool.poetry]
name = "sema4ai-http-helper"
version = "1.0.0"
description = "HTTP library that enables the use of OS certificate stores when working behind MITM firewalls"
authors = [
	"Kari H. <kari@sema4.ai>",
]
readme = "README.md"
repository = "https://github.com/sema4ai/actions/"
license = "Apache-2.0"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
truststore = "0.9.2"
urllib3 = ">=2.2.2"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"