[tool.poetry]
name = "sema4ai-http-helper"
version = "2.0.0"
description = "HTTP library that enables the use of OS certificate stores when working behind MITM firewalls"
authors = [
	"Kari H. <kari@sema4.ai>",
]
readme = "README.md"
repository = "https://github.com/sema4ai/actions/"
license = "Apache-2.0"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
truststore = "0.9.2"
urllib3 = ">=2.2.2"
pyyaml = ">=5.0"
types-PyYAML = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }

[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
