# =============================================================================
# PEP 621 project metadata (used by uv)
# =============================================================================
[project]
name = "sema4ai-http-helper"
version = "2.1.2"
description = "HTTP library that enables the use of OS certificate stores when working behind MITM firewalls"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sema4.ai, Inc.", email = "dev@sema4.ai" },
    { name = "Kari H.", email = "kari@sema4.ai" },
]
dependencies = [
    "truststore>=0.9.2",
    "urllib3>=2.5.0",
    "pyyaml>=5.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sema4ai/actions/"
Repository = "https://github.com/sema4ai/actions/"

# =============================================================================
# UV configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "sema4ai-devutils",
]

[tool.uv.sources]
sema4ai-devutils = { workspace = true }

# =============================================================================
# Poetry configuration (kept for backward compatibility)
# =============================================================================
[tool.poetry]
name = "sema4ai-http-helper"
version = "2.1.2"
description = "HTTP library that enables the use of OS certificate stores when working behind MITM firewalls"
authors = [
	"Sema4.ai, Inc. <dev@sema4.ai>",
	"Kari H. <kari@sema4.ai>",
]
readme = "README.md"
repository = "https://github.com/sema4ai/actions/"
license = "Apache-2.0"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
truststore = "0.9.2"
urllib3 = ">=2.5.0"
pyyaml = ">=5.0"
types-PyYAML = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
sema4ai-devutils = { path = "../devutils/", develop = true }

[tool.mypy]
mypy_path = "src:tests"

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
